--- a/src/TpmManager/appsettings.Development.json
+++ b/src/TpmManager/appsettings.Development.json
@@ -5,5 +5,9 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "ConnectionStrings" : 
+  {
+    "PsgSqlConnection" : "Host=localhost;Port=5432;Database=TpmManagerDB;Pooling=true;"
   }
 }
